--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,3 +21,12 @@ repos:
       - id: isort
         name: isort (python)
         args: ["--profile", "black", "--filter-files"]
+-   repo: https://github.com/Riverside-Healthcare/djLint
+    rev: v1.34.0
+    hooks:
+      - id: djlint-reformat-handlebars
+        files: "\\.html"
+        types_or: ['html']
+      - id: djlint-handlebars
+        files: "\\.html"
+        types_or: ['html']
