--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,19 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.0"
 celery = "^5.3.6"
-docker = "^7.0.0"
+docker = "^7.0.0
 djangorestframework = "^3.14.0"
-
+psycopg2-binary = "^2.9.9"
+django-extensions = "^3.2.3"
+plotly = "^5.18.0"
+django-celery-results = "^2.5.1"
+django-colorfield = "^0.11.0"
+django-environ = "^0.11.2"
+sentry-sdk = "^1.39.1"
+boto3 = "^1.34.14"
 
 [tool.poetry.dev-dependencies]
-pre-comit = "3.5.0"
+pre-commit = "3.6.0"
 
 
 [build-system]
