--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = "^3.11"
 django = "^5.0"
 celery = "^5.3.6"
-docker = "^7.0.0
+docker = "^7.0.0"
 djangorestframework = "^3.14.0"
 psycopg2-binary = "^2.9.9"
 django-extensions = "^3.2.3"
@@ -19,6 +19,7 @@ django-colorfield = "^0.11.0"
 django-environ = "^0.11.2"
 sentry-sdk = "^1.39.1"
 boto3 = "^1.34.14"
+redis = "^5.0.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "3.6.0"
