--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,8 @@ services:
     ports:
       - "8002:8002"
     depends_on:
-      - db
-      - redis
-      - celery
+      db:
+        condition: service_healthy
 
   celery:
     build: .
@@ -25,6 +24,11 @@ services:
       CELERY_RESULT_BACKEND: "redis://habitual_life_redis:6379/0"
     depends_on:
       - redis
+    healthcheck:
+      test: celery inspect ping
+      interval: 1m
+      timeout: 10s
+      retries: 10
 
   redis:
     image: "redis:latest"
@@ -35,9 +39,16 @@ services:
   db:
     container_name: postgresql_db
     image: postgres:15
+    volumes:
+      - ./data/db:/var/lib/postgresql/data
     environment:
         POSTGRES_DB: ${DB_NAME}
         POSTGRES_USER: ${DB_USER}
         POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "${DB_USER}"]
+      interval: 5s
+      timeout: 30s
+      retries: 6
