--- a/.github/workflows/hl-ci.yml
+++ b/.github/workflows/hl-ci.yml
@@ -32,4 +32,5 @@ jobs:
       run: |
         cd src
         poetry run python manage.py test
-        
+      env:
+        ENVIRONMENT: ${{ secrets.ENVIRONMENT }}
