--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ django-environ = "^0.11.2"
 sentry-sdk = "^1.39.1"
 boto3 = "^1.34.14"
 redis = "^5.0.1"
+factory-boy = "^3.3.0"
+coverage = "^7.4.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "3.6.0"
