--- a/.github/workflows/hl-ci.yml
+++ b/.github/workflows/hl-ci.yml
@@ -37,3 +37,4 @@ jobs:
         USE_AWS: ${{ secrets.USE_AWS }}
         USE_CELERY: ${{ secrets.USE_CELERY }}
         USE_EMAIL: ${{ secrets.USE_EMAIL }}
+        CELERY_BROKER_TRANSPORT_URL: ${{ secrets.CELERY_BROKER_TRANSPORT_URL }}
