--- a/.github/workflows/hl-ci.yml
+++ b/.github/workflows/hl-ci.yml
@@ -38,3 +38,5 @@ jobs:
         USE_CELERY: ${{ secrets.USE_CELERY }}
         USE_EMAIL: ${{ secrets.USE_EMAIL }}
         CELERY_BROKER_TRANSPORT_URL: ${{ secrets.CELERY_BROKER_TRANSPORT_URL }}
+        CELERY_TIMEZONE: ${{ secrets.CELERY_TIMEZONE }}
+        CELERY_RESULT_BACKEND: ${{ secrets.CELERY_RESULT_BACKEND }}
