--- a/.github/workflows/hl-ci.yml
+++ b/.github/workflows/hl-ci.yml
@@ -40,3 +40,6 @@ jobs:
         CELERY_BROKER_TRANSPORT_URL: ${{ secrets.CELERY_BROKER_TRANSPORT_URL }}
         CELERY_TIMEZONE: ${{ secrets.CELERY_TIMEZONE }}
         CELERY_RESULT_BACKEND: ${{ secrets.CELERY_RESULT_BACKEND }}
+        EMAIL_HOST_USER: ${{ secrets.EMAIL_HOST_USER }}
+        EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
+        EMAIL_PORT: ${{ secrets.EMAIL_PORT }}
