--- a/.github/workflows/hl-ci.yml
+++ b/.github/workflows/hl-ci.yml
@@ -15,6 +15,7 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: ["3.11"]
+        redis-version: [7.x]
 
     # Service containers to run with `container-job`
     services:
@@ -42,6 +43,10 @@ jobs:
     - name: Install Dependecies
       run: |
         poetry install
+    - name: Start Redis
+      uses: supercharge/redis-github-action@1.7.0
+      with:
+        redis-version: ${{ matrix.redis-version }}
     - name: Run Tests
       run: |
         cd src
