--- a/.github/workflows/hl-ci.yml
+++ b/.github/workflows/hl-ci.yml
@@ -29,20 +29,22 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-      postgres:
-        # Docker Hub image
-        image: postgres
-        # Provide the password for postgres
-        env:
-          DB_NAME: 'habituallife_db'
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_USER: ${{ secrets.DB_USER }}
-        # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5...
+#      postgres:
+#        # Docker Hub image
+#        image: postgres
+#        # Provide the password for postgres
+#        env:
+#          DB_NAME: ${{ secrets.DB_NAME }}
+#          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+#          DB_USER: ${{ secrets.DB_USER }}
+#        # Set health checks to wait until postgres has started
+#        ports:
+#          - 5432:5432
+#        options: >-
+#          --health-cmd pg_isready
+#          --health-interval 10s
+#          --health-timeout 5s
+#          --health-retries 5...
 
     steps:
     - uses: actions/checkout@v3
@@ -63,6 +65,7 @@ jobs:
         redis-version: ${{ matrix.redis-version }}
     - name: Run Tests
       run: |
+        sudo systemctl start postgresql.service
         cd src
         poetry run python manage.py test
       env:
