--- a/.github/workflows/hl-ci.yml
+++ b/.github/workflows/hl-ci.yml
@@ -52,6 +52,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+    - name: setup postgres
+      uses: ikalnytskyi/action-setup-postgres@v5
+      run: |
+        sudo systemctl start postgresql.service
     - name: Install Poetry
       run: |
         python -m pip install --upgrade pip
